fix trigger channels flex-wrap

--- a/src/ducks/Signals/signalFormManager/signalCrudForm/signal/TriggerForm.module.scss
+++ b/src/ducks/Signals/signalFormManager/signalCrudForm/signal/TriggerForm.module.scss
@@ -97,6 +97,7 @@ $trigger-shared-form-width: 496px;
   display: flex;
   margin-top: 5px;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .labelClassName {
